--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
-                                <a href="https://www.facebook.com/herbalist.ml/" target="_blank">
+                                <a href="https://www.facebook.com/smokeshopcr" target="_blank">
                                     <span class="et_pb_image_wrap ">
                                  <i class="fab fa-facebook sap-icon" style="color: black;"></i>
                                 </span>
@@ -749,7 +749,6 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                         </div>
 
-
                         <div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
                         <div class="et_pb_text_inner">
                             <p>Hemos ayudado a proveer accesorios de calidad a miles de clientes satisfechos en Costa Rica. Estamos disponibles en cualquier lugar, las 24 horas del día, con los mejores accesorios para fumar.</p>
@@ -846,7 +845,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_3_tb_footer">
-                                <a href="https://www.facebook.com/herbalist.ml/" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-facebook sap-icon" style="color: black;"></i></span>
+                                <a href="https://www.facebook.com/smokeshopcr" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-facebook sap-icon" style="color: black;"></i></span>
                                 </a>
                             </div>
 
