--- a/shop/ropa/index.html
+++ b/shop/ropa/index.html
@@ -495,7 +495,7 @@
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
-                                <a href="https://www.facebook.com/herbalist.ml/" target="_blank">
+                                <a href="https://www.facebook.com/smokeshopcr" target="_blank">
                                 <span class="et_pb_image_wrap ">
                              <i class="fab fa-facebook sap-icon" style="color: black;"></i>
                             </span>
