--- a/shop/accesorios/index.html
+++ b/shop/accesorios/index.html
@@ -369,7 +369,7 @@
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
-                                <a href="https://www.facebook.com/herbalist.ml/" target="_blank">
+                                <a href="https://www.facebook.com/smokeshopcr" target="_blank">
                                 <span class="et_pb_image_wrap ">
                              <i class="fab fa-facebook sap-icon" style="color: black;"></i>
                             </span>
@@ -1112,7 +1112,7 @@
                                 </div>
 
                                 <div class="et_pb_module et_pb_image et_pb_image_2_tb_footer">
-                                    <a href="https://www.facebook.com/herbalist.ml/" target="_blank" class="custom-a-social">
+                                    <a href="https://www.facebook.com/smokeshopcr" target="_blank" class="custom-a-social">
                                         <i class="fab fa-facebook sap-icon"></i>
                                     </a>
                                 </div>
