--- a/shop/index.html
+++ b/shop/index.html
@@ -389,7 +389,7 @@ heateor_sss_vertical_sharing{
                                 </div>
     
                                 <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
-                                    <a href="https://www.facebook.com/herbalist.ml/" target="_blank">
+                                    <a href="https://www.facebook.com/smokeshopcr" target="_blank">
                                         <span class="et_pb_image_wrap ">
                                      <i class="fab fa-facebook sap-icon" style="color: black;"></i>
                                     </span>
@@ -725,7 +725,7 @@ heateor_sss_vertical_sharing{
                                 </div>
 
                                 <div class="et_pb_module et_pb_image et_pb_image_3_tb_footer">
-                                    <a href="https://www.facebook.com/herbalist.ml/" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-facebook sap-icon" style="color: black;"></i></span>
+                                    <a href="https://www.facebook.com/smokeshopcr" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-facebook sap-icon" style="color: black;"></i></span>
                                     </a>
                                 </div>
 
