--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -1122,7 +1122,7 @@
                                 </div>
 
                                 <div class="et_pb_module et_pb_image et_pb_image_2_tb_footer">
-                                    <a href="https://www.facebook.com/herbalist.ml/" target="_blank" class="custom-a-social">
+                                    <a href="https://www.facebook.com/smokeshopcr" target="_blank" class="custom-a-social">
                                         <i class="fab fa-facebook sap-icon"></i>
                                     </a>
                                 </div>
