--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                                                 <div class="et_pb_text_inner">
                                                     <h1>Herbalist Smoke Shop</h1>
 
-                                                    <p class="custom-intro-text">Somos una tienda dedicada a ofrecer los mejores accesorios para fumar entregados discretamente hasta tu puerta</p>
+                                                    <p class="custom-intro-text">Smoke Shop dedicada a ofrecer los mejores accesorios para fumar entregados discretamente hasta tu puerta</p>
                                                     
                                                 </div>
                                             </div>
