--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@
                                     <div class="et_pb_module et_pb_text et_pb_text_6  et_pb_text_align_left et_pb_bg_layout_light">
 
 
-                                        <div class="et_pb_text_inner"><h2>Ropa 420 <span class="float-right-text">
-                                            <a href="https://www.herbal.ml/shop/ropa/">Ver ropa &gt;&gt;&gt;</a></span></h2>
+                                        <div class="et_pb_text_inner"><h2>Smoke Shop <span class="float-right-text">
+                                            <a href="https://herbalist506.com/">Smoke Shop &gt;&gt;&gt;</a></span></h2>
                                         </div>
 
 
