--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                                     <div class="et_pb_row et_pb_row_3">
                                     <div class="et_pb_column et_pb_column_1_2 et_pb_column_3 et_clickable  et_pb_css_mix_blend_mode_passthrough">
 
-                                        <div class="et_pb_module et_pb_text et_pb_text_3  et_pb_text_align_left et_pb_bg_layout_light">
+                                        <div class="et_pb_module et_pb_text et_pb_text_3  et_pb_text_align_left et_pb_bg_layout_light custom-vuela-alto">
                                             <div class="et_pb_text_inner"><h2>Vuela Alto!</h2></div>
                                         </div>
 
