--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                                         <div class="et_pb_module et_pb_text et_pb_text_4  et_pb_text_align_left et_pb_bg_layout_light">
 
                                             <div class="et_pb_text_inner">
-                                                <h2>Herbalist es aquel que utiliza las plantas para el bienestar.</h2>
+                                                <h2 class="custom-h2-text">Herbalist es aquel que utiliza las plantas para el bienestar</h2>
                                             </div>
 
                                         </div>
