--- a/index.html
+++ b/index.html
@@ -494,20 +494,20 @@
                                                     <div class="shop-content">
                                                         <h2>Pipas</h2>
                                                         <div class="shop-image">
-                                                            <a href="https://www.herbal.ml/shop/pipas/"><img src="https://www.herbal.ml/img/icons/pipa-icon.jpg" alt="pipas costa rica" /></a>
+                                                            <a href="https://herbalist506.com/collections/pipas"><img src="https://www.herbal.ml/img/icons/pipa-icon.jpg" alt="pipas" /></a>
                                                         </div>
 
                                                         <p>
                                                             Las pipas de vidrio son la forma más práctica y rápida para fumar hierba. La mayoría de nuestras pipas están sopladas a mano y vienen en colores y diseños especiales.
                                                         </p>
 
-                                                        <a class="more" href="https://www.herbal.ml/shop/pipas/" target="" >Ver más &gt;&gt;&gt;</a>
+                                                        <a class="more" href="https://herbalist506.com/collections/pipas" target="" >Ver más &gt;&gt;&gt;</a>
                                                     </div>
                                                 </div><div class="shop-module">
                                                     <div class="shop-content">
                                                         <h2>Bongs</h2>
                                                         <div class="shop-image">
-                                                            <a href="https://www.herbal.ml/shop/bongs/"><img src="https://www.herbal.ml/img/icons/bong-icon.jpg" alt="bongs costa rica" /></a>
+                                                            <a href="https://herbalist506.com/collections/bongs"><img src="https://www.herbal.ml/img/icons/bong-icon.jpg" alt="bongs" /></a>
                                                         </div>
                                                         <p>
                                                             En nuestra tienda encontrarás tu próximo bong o pipa! Tenemos muchos tipos de pipas y bongs a la venta.
@@ -518,23 +518,23 @@
                                                         <div class="shop-content">
                                                             <h2>Vapes</h2>
                                                             <div class="shop-image">
-                                                                <a href="https://www.herbal.ml/shop/vapes/"><img src="https://www.herbal.ml/img/icons/vape-icon.jpg" alt="vaporizadores costa rica" /></a>
+                                                                <a href="https://herbalist506.com/collections/vaporizadores"><img src="https://www.herbal.ml/img/icons/vape-icon.jpg" alt="vaporizadores" /></a>
                                                             </div>
                                                             <p>
                                                                 Si bien el vapeo ha existido durante años, recientemente se ha disparado en popularidad como una forma más pura y saludable de disfrutar el fumado sin la necesidad de fumar a combustión.
                                                             </p>
-                                                            <a class="more" href="https://www.herbal.ml/shop/vapes/" target="">Ver más &gt;&gt;&gt;</a>
+                                                            <a class="more" href="https://herbalist506.com/collections/vaporizadores" target="">Ver más &gt;&gt;&gt;</a>
                                                         </div>
                                                     </div><div class="shop-module">
                                                         <div class="shop-content">
                                                             <h2>Picadoras</h2>
                                                             <div class="shop-image">
-                                                                <a href="https://www.herbal.ml/shop/picadoras/"><img src="https://www.herbal.ml/img/icons/grinder-icon.jpg" alt="picadoras o grinders costa rica" /></a>
+                                                                <a href="https://herbalist506.com/collections/grinders"><img src="https://www.herbal.ml/img/icons/grinder-icon.jpg" alt="picadoras" /></a>
                                                             </div>
                                                             <p>
                                                                 La pícadora o grinder es una de las herramientas más importantes que puede tener cualquier stoner. Para moler esas hierbas secas y hacerlas perfectas para un humo suave, se necesita un grinder fuerte.
                                                             </p>
-                                                            <a class="more" href="https://www.herbal.ml/shop/picadoras/" target="">Ver más &gt;&gt;&gt;</a>
+                                                            <a class="more" href="https://herbalist506.com/collections/grinders" target="">Ver más &gt;&gt;&gt;</a>
                                                         </div>
                                                     </div>
                                                 </div>
