--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
     <link rel="stylesheet" id="et-core-unified-2-cached-inline-styles" href="https://www.herbal.ml/css/et-core-unified-2.min.css?v5" />
     <link rel="preload" as="style" id="et-core-unified-tb-12-tb-31-deferred-2-cached-inline-styles" href="https://www.herbal.ml/css/et-core-unified-tb-12-tb-31-deferred-2.min.css?v19654644545" onload="this.onload=null;this.rel='stylesheet';" />
 
-    <style type="text/css">/** Mega Menu CSS: fs **/</style>
+    <style type="text/css">/** Mega Menu CSS: fs **/
+    
+    p.custom-intro-text {
+    text-align: left;
+}
+    
+    </style>
 
 </head>
 
