--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
                                                        
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider" style="background-image: url('https://cdn.shopify.com/s/files/1/0728/2891/1906/files/herbalist-phone.png?v=1680329487&width=1100');">
+                                                            <div class="feature-slider" style="background-image: url('https://www.herbalistcr.com/540e7e8c-08db-4ecb-8d80-fcf3eb634507_SUNS24021_eComm_DealsPage_Assets_Web_Desktop_2.jpg');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">CBD, bongs, pipas, accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist506.com/collections/all">
