--- a/index.html
+++ b/index.html
@@ -85,7 +85,13 @@
     p.custom-intro-text {
     text-align: left;
 }
-    
+
+
+        .et_pb_section_1_tb_header.et_pb_section {
+    display: none !important;
+}
+
+        
     </style>
 
 </head>
